[metadata]
name = sk-typing
version = 0.0.1
description = Typing for scikit-learn
license = MIT
author = Thomas J. Fan
author_email = thomasjpfan@gmail.com
url = https://github.com/thomasjpfan/sk_typing
long_description = file: README.md

[options]
packages = find:
install_requires =
    scikit-learn==0.24
    numpydoc==1.1.0

[options.extras_require]
dev =
    pytest==6.2.1