[metadata]
name = sk-typing
version = 0.0.1
description = Typing for scikit-learn
license = MIT
author = Thomas J. Fan
author_email = thomasjpfan@gmail.com
url = https://github.com/thomasjpfan/sk_typing
long_description = file: README.md

[options]
packages = find:
install_requires =
    scikit-learn==0.24
    numpydoc==1.1.0
    typing-extensions>=3.7.4.3

[options.extras_require]
dev =
    pytest==6.2.1
    mypy==0.790

[mypy]
ignore_missing_imports = True
allow_redefinition = True