[metadata]
name = sk-typing
version = 0.0.1
description = Typing for scikit-learn
license = MIT
author = Thomas J. Fan
author_email = thomasjpfan@gmail.com
url = https://github.com/thomasjpfan/sk_typing
long_description = file: README.md

[options]
packages = find:
install_requires =
    scikit-learn==0.22.*
    numpydoc==1.1.0
    typing-extensions>=3.7.4.3

[options.extras_require]
dev =
    pytest==6.2.1
    mypy==0.790

[mypy]
ignore_missing_imports = True
allow_redefinition = True

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
exclude = __init__.py
ignore =
    E20,   # Extra space in brackets
    E231,E241,  # Multiple spaces around ","
    E26,   # Comments
    E4,    # Import formatting
    E721,  # Comparing types instead of isinstance
    E731,  # Assigning lambda expression
    E741,  # Ambiguous variable names
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    F811,  # redefinition of unused 'loop' from line 10
max-line-length = 88
